opam-version: "2.0"
license: "MIT"
synopsis: "A minimal HTTP interface compatible with both HTTP/1.1 and HTTP/2"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
homepage: "https://github.com/kit-ty-kate/minimal_http"
bug-reports: "https://github.com/kit-ty-kate/minimal_http/issues"
dev-repo: "git+https://github.com/kit-ty-kate/minimal_http"
build: ["dune" "build" "-p" name "-j" jobs]
